name:                mtscheme
version:             0.1.0.0
synopsis:            A simple interpreter for a subset of the scheme language
description:         Please see README.md
homepage:            https://github.com/martintrojer/haskell-scheme
license:             BSD3
license-file:        LICENSE
author:              Martin Trojer
maintainer:          martin.trojer@gmail.com
copyright:           2016 Martin Trojer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Interpreter
                     , BuiltIns
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , transformers
                     , containers
  default-language:    Haskell2010

executable mtscheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtscheme
  default-language:    Haskell2010

test-suite mtscheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mtscheme
                     , hspec
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/martintrojer/haskell-scheme
